# turtlebot_hri

./: README.md  README.md~
face_dr/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
face_dr/action/: fdr.action~
face_dr/include/: fdr_client.h  fdr_client.h~  fdr_server.h  fdr_server.h~  fdr_utilities.h  fdr_utilities.h~
face_dr/launch/: velocity_smoother.launch  velocity_smoother.launch~
face_dr/msg/: fdr_msg.msg  fdr_msg.msg~  motion_msg.msg~
face_dr/src/: fdr_client.cpp  fdr_client.cpp~  fdr_client.h  fdr_client.h~  fdr_client_node.cpp  fdr_client_node.cpp~  fdr_server.cpp~  fdr_server.h~  fdr_server_node.cpp  fdr_server_node.cpp~  fdr_utilities.cpp  fdr_utilities.cpp~  utilities.cpp~  utilities.h~
procrob_functional/: CMakeLists.txt  package.xml
procrob_functional/data/: train.txt
procrob_functional/src/: face_rec_client.cpp  face_recognition.cpp  saveImage.cpp
roaming_map/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
roaming_map/src/: nav_and_detect.cpp  nav_and_detect.cpp~
